109-1 Docker/File/W14-20201215/test-ingress-nginx/ingress-httpd.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: www.a.com
    http:
      paths:
      - path: /
        backend:
          serviceName: httpd
          servicePort: 80
