109-1 Docker/File/W14-20201215/test-ingress-nginx/ingress-httpd2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress2
spec:
  rules:
  - host: www.b.com
    http:
      paths:
      - path: /
        backend:
          serviceName: httpd2
          servicePort: 80
